2011-05-26  Georg-Johann Lay  <avr@gjlay.de>

	PR target/44643
	* config/avr/avr.c (avr_insert_attributes): Leave TREE_READONLY
	alone. Error if non-const data has attribute progmem.

2011-05-26  Jakub Jelinek  <jakub@redhat.com>

	PR c++/49165
	* gimplify.c (shortcut_cond_r): Don't special case
	COND_EXPRs if they have void type on one of their arms.

	PR tree-optimization/49161
	* tree-vrp.c (struct case_info): New type.
	(compare_case_labels): Sort case_info structs instead of
	trees, and not primarily by CASE_LABEL uids but by
	label_for_block indexes.
	(find_switch_asserts): Put case labels into struct case_info
	array instead of TREE_VEC, adjust sorting, compare label_for_block
	values instead of CASE_LABELs.

2011-05-25  Jakub Jelinek  <jakub@redhat.com>

	PR target/49128
	* config/i386/driver-i386.c (host_detect_local_cpu): Fix a typo.

2011-05-18  Jan Hubicka  <jh@suse.cz>

	PR tree-optimization/44897 
	* ipa-inline.c (cgraph_decide_recursive_inlining): Do not divide
	by zero for insane profiles.

2011-05-24  Eric Botcazou  <ebotcazou@adacore.com>

	* config/sparc/sparc.c (sparc_option_override): If not set by the user,
	force flag_ira_share_save_slots to 0.

2011-05-24  Uros Bizjak  <ubizjak@gmail.com>

	PR target/49133
	* config/i386/sse.md (sse2_loadhpd): Remove shufpd alternative.

2011-05-24  H.J. Lu  <hongjiu.lu@intel.com>

	Backport from mainline
	2011-05-24  H.J. Lu  <hongjiu.lu@intel.com>

	PR target/49128
	* config/i386/driver-i386.c (host_detect_local_cpu): Always
	add -mno-XXX.  Handle FMA.

2011-05-23  Jakub Jelinek  <jakub@redhat.com>

	PR lto/49123
	* fold-const.c (constant_boolean_node): If type is non-NULL,
	use build_int_cst_type instead of build_int_cst.

	PR debug/49032
	* dbxout.c: Include cgraph.h.
	(dbxout_expand_expr): If a VAR_DECL is TREE_STATIC, not written
	and without value expr, return NULL if no varpool node exists for
	it or if it is not needed.
	* Makefile.in (dbxout.o): Depend on $(CGRAPH_H).

	PR c/49120