@@ -1,3 +1,8 @@
+2011-05-26  Pat Haugen <pthaugen@us.ibm.com>
+
+	* config/rs6000/rs6000.c (rs6000_register_move_cost): Make LR/CTR
+	moves expensive on Power7 also.
+
 2011-05-26  Georg-Johann Lay  <avr@gjlay.de>
 
 	PR target/44643
